--- a/VShoesEShop/Views/Products/Create.cshtml
+++ b/VShoesEShop/Views/Products/Create.cshtml
@@ -4,11 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
-
-<h4>Product</h4>
+<h4 style="margin-left: 15%;" >Add New Product</h4>
 <hr />
-<div class="row">
+<div style="margin-left: 10%;" class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -64,11 +62,13 @@
             </div>
         </form>
     </div>
+    
+</div>
+<div style="margin-left: 10%;">
+    <a style="color: #000000" asp-action="Index">Back to List</a>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
