--- a/VShoesEShop/wwwroot/css/style.css
+++ b/VShoesEShop/wwwroot/css/style.css
@@ -2138,8 +2138,8 @@ textarea.form-control {
 }
 
 .was-validated .custom-control-input:valid:checked ~ .custom-control-label::before, .custom-control-input.is-valid:checked ~ .custom-control-label::before {
-  border-color: #34ce57;
-  background-color: #34ce57;
+    border-color: #34ce57;
+    background-color: #808080;
 }
 
 .was-validated .custom-control-input:valid:focus ~ .custom-control-label::before, .custom-control-input.is-valid:focus ~ .custom-control-label::before {
@@ -2365,20 +2365,20 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #212529;
-  background-color: #D19C97;
-  border-color: #D19C97;
+  background-color: #D3D3D3;
+  border-color: #D3D3D3;
 }
 
     .btn-primary:hover {
         color: #000000;
-        background-color: #c5837c;
-        border-color: #c17a74;
+        background-color: #808080;
+        border-color: #808080;
     }
 
     .btn-primary:focus, .btn-primary.focus {
         color: ##000000;
-        background-color: #c5837c;
-        border-color: #c17a74;
+        background-color: #808080;
+        border-color: #808080;
         box-shadow: 0 0 0 0.2rem rgba(183, 138, 135, 0.5);
     }
 
@@ -2388,16 +2388,16 @@ fieldset:disabled a.btn {
   border-color: #D19C97;
 }
 
-.btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
-.show > .btn-primary.dropdown-toggle {
-  color: #fff;
-  background-color: #c17a74;
-  border-color: #bd726b;
-}
+    .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
+    .show > .btn-primary.dropdown-toggle {
+        color: #fff;
+        background-color: #808080;
+        border-color: #808080;
+    }
 
 .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
 .show > .btn-primary.dropdown-toggle:focus {
-  box-shadow: 0 0 0 0.2rem rgba(183, 138, 135, 0.5);
+  box-shadow: 0 0 0 0.2rem rgba(128, 128, 128, 0.5);
 }
 
 .btn-secondary {
@@ -2660,15 +2660,15 @@ fieldset:disabled a.btn {
 }
 
 .btn-outline-primary {
-  color: #D19C97;
-  border-color: #D19C97;
+    color: #212529;
+    border-color: #212529;
 }
 
-.btn-outline-primary:hover {
-  color: #212529;
-  background-color: #D19C97;
-  border-color: #D19C97;
-}
+    .btn-outline-primary:hover {
+        color: #212529;
+        background-color: #D3D3D3;
+        border-color: #D3D3D3;
+    }
 
 .btn-outline-primary:focus, .btn-outline-primary.focus {
   box-shadow: 0 0 0 0.2rem rgba(209, 156, 151, 0.5);
@@ -4582,14 +4582,14 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #D19C97;
+  color: #808080;
   background-color: #fff;
   border: 1px solid #dee2e6;
 }
 
 .page-link:hover {
   z-index: 2;
-  color: #ba6a62;
+  color: #D3D3D3;
   text-decoration: none;
   background-color: #e9ecef;
   border-color: #dee2e6;
@@ -6100,7 +6100,7 @@ a.close.disabled {
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #c17a74 !important;
+    background-color: #D3D3D3 !important;
 }
 
 .bg-secondary {
@@ -9474,10 +9474,10 @@ a.text-dark:hover, a.text-dark:focus {
   outline: none;
 }
 
-.navbar-light .navbar-nav .nav-link:hover,
-.navbar-light .navbar-nav .nav-link.active {
-  color: #D19C97;
-}
+    .navbar-light .navbar-nav .nav-link:hover,
+    .navbar-light .navbar-nav .nav-link.active {
+        color: #808080;
+    }
 
 @media (max-width: 991.98px) {
   .navbar-light .navbar-nav .nav-link {
@@ -9556,7 +9556,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .product-item .btn:hover {
-  color: #D19C97 !important;
+    color: #808080 !important;
 }
 
 .contact-form .help-block ul {
